--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ margin-left: 10%;
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color:navy;">  
   <div class="container-fluid">
-  <img src="image/ad.png" width="85px" height="70px" style="margin-right: 20px;">
+  <img src="image/L.png" width="85px" height="70px" style="margin-right: 20px;">
   <div  class="label">
   
   <h5 style="color: white;"style="margin-left: 50px;">+91 98256 75267 </h5>
