--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@ margin-left: 10%;
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color:navy;">  
   <div class="container-fluid">
-  <img src="image/L.png" width="85px" height="70px" style="margin-right: 20px;">
+  <img src="ph/L.png" width="85px" height="70px" style="margin-right: 20px;">
   <div  class="label">
   
   <h5 style="color: white;"style="margin-left: 50px;">+91 98256 75267 </h5>
   </div>
-  <a href="https://maps.app.goo.gl/bXFschH66WpwrHC66 "><img src="image/google-maps.png" height="28px" width="28px" style=" margin-bottom: 5px;"></a>
+  <a href="https://maps.app.goo.gl/bXFschH66WpwrHC66 "><img src="ph/google-maps.png" height="28px" width="28px" style=" margin-bottom: 5px;"></a>
   <h5 style="margin-left: 4px; color: white;">Ahmdabad, Gujarat</h5>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -194,13 +194,13 @@ margin-left: 10%;
   <div class="image">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="image/ROOM1.jpg" >
+      <img src="ph/ROOM1.jpg" >
     </div>
     <div class="carousel-item">
-      <img src="image/ROOM2.jpg" >
+      <img src="ph/ROOM2.jpg" >
     </div>
     <div class="carousel-item">
-      <img src="image/ROOM3.jpg">
+      <img src="ph/ROOM3.jpg">
     </div>
     </div>
   </div>
@@ -225,7 +225,7 @@ margin-left: 10%;
   <div class="row">
     <div class="col-lg-3 col-md-3 col-12">
       <div class="card">
-        <img class="card-img-top" src="image/cab.jpg" alt="Card image" height="433px">
+        <img class="card-img-top" src="ph/cab.jpg" alt="Card image" height="433px">
           <div class="card-body">
             <h4 class="card-title"><b>Cab Facility</b></h4>
               <p class="card-text" style="font-size: 1.1em;">Cab facility on request First time Pickup facility free (Airport & Railway Station)</p>
@@ -238,7 +238,7 @@ margin-left: 10%;
 
         <div class="col-lg-3 col-md-3 col-12">
       <div class="card">
-        <img class="card-img-top" src="image/feedback.jpg" alt="Card image" height="454px">
+        <img class="card-img-top" src="ph/feedback.jpg" alt="Card image" height="454px">
           <div class="card-body">
             <h4 class="card-title"><b>Feedback System</b></h4>
               <p class="card-text" style="font-size: 1.1em;">Continue Reviews And Monthly Feedback System</p>
@@ -250,7 +250,7 @@ margin-left: 10%;
 
         <div class="col-lg-3 col-md-3 col-12">
       <div class="card">
-        <img class="card-img-top" src="image/hygiene.jpg" alt="Card image" height="433px">
+        <img class="card-img-top" src="ph/hygiene.jpg" alt="Card image" height="433px">
           <div class="card-body">
             <h4 class="card-title"><b>Qulity Hygiene</b></h4>
               <p class="card-text"  style="font-size: 1.1em;">Good Health Starts With Good Food Chocice By AD LIVING</p>
@@ -262,7 +262,7 @@ margin-left: 10%;
 
         <div class="col-lg-3 col-md-3 col-12">
       <div class="card">
-        <img class="card-img-top" src="image/cctv.jpg" alt="Card image" height="433px">
+        <img class="card-img-top" src="ph/cctv.jpg" alt="Card image" height="433px">
           <div class="card-body">
             <h4 class="card-title"><b>Security System</b></h4>
               <p class="card-text"  style="font-size: 1.1em;">A Simple Yet Powerful Reminder That Safety Is a Priority</p>
@@ -282,7 +282,7 @@ margin-left: 10%;
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-6 col-md-6 col-12">
-      <img src="image/whyad.jpg" class="img-fluid aboutimg" height="40px">
+      <img src="ph/whyad.jpg" class="img-fluid aboutimg" height="40px">
     </div>
     <div class="col-lg-6 col-md-6 col-12">
       <h2 class="display-4" style="font-family: georgia, serif;  font-size: 3em;">WELCOME TO <b>AD LIVING</b></h2>
@@ -304,7 +304,7 @@ margin-left: 10%;
   <div class="row">
     <div class="col-lg-4 col-md-4 col-12">
       <div class="card">
-        <img class="card-img-top" src="image/g4.jpg" alt="Card image" height="524px">
+        <img class="card-img-top" src="ph/g4.jpg" alt="Card image" height="524px">
           <div class="card-body">
             <h4 class="card-title"><b>For Girls-1</b></h4>
               <p class="card-text" style="font-size: 1.3em;">Nr. Swastik Char Rasta</p>
